Fixed z-index

--- a/css/navstyle.scss
+++ b/css/navstyle.scss
@@ -55,3 +55,7 @@ hr
     height:2px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0));
 }
+.card
+{
+    z-index: 0;
+}
